--- a/S06_GeometriaVectorial.ipynb
+++ b/S06_GeometriaVectorial.ipynb
@@ -715,6 +715,10 @@
     "\n",
     "***Pasos del Método del Paralelogramo***\n",
     "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/SumaVectores00.PNG?raw=true\" width=\"350\" />\n",
+    "</p>\n",
+    "\n",
     "Para sumar dos vectores $\\vec{u}$ y $\\vec{v}$ utilizando el método del paralelogramo, se siguen los siguientes pasos:\n",
     "\n",
     "1. **Representación Gráfica de los Vectores**: Dibuje los vectores $\\vec{u}$ y $\\vec{v}$ con una escala y orientación adecuadas, originados desde el mismo punto.\n",
@@ -1663,7 +1667,10 @@
     "\n",
     "$$D = \\left| \\frac{-168}{19.925} \\right| \\approx 8.43 \\text{ unidades}$$\n",
     "\n",
-    "Con lo que la distancia más corta entre las rectas $l_1: \\frac{x-4}{2}=\\frac{y-5}{4}=\\frac{z+4}{3}$ y $l_2: \\frac{x+1}{3}=\\frac{y-7}{2}=\\frac{z-5}{6}$ es aproximadamente $ 8.43 $ unidades."
+    "Con lo que la distancia más corta entre las rectas $l_1: \\frac{x-4}{2}=\\frac{y-5}{4}=\\frac{z+4}{3}$ y $l_2: \\frac{x+1}{3}=\\frac{y-7}{2}=\\frac{z-5}{6}$ es aproximadamente $ 8.43 $ unidades.\n",
+    "\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -1721,7 +1728,9 @@
     "- Magnitud de $ \\vec{V_1} \\times \\vec{V_2} $: $ 67.0883 $.\n",
     "- Producto escalar de $ (\\vec{V_1} \\times \\vec{V_2}) $ y $ \\vec{RP_{l2}} $: $ -863.4 $.\n",
     "\n",
-    "La distancia $ D $ entre las rectas es aproximadamente $ 12.87 $ unidades."
+    "La distancia $ D $ entre las rectas es aproximadamente $ 12.87 $ unidades.\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -1760,7 +1769,9 @@
     "\n",
     "Para los mismos valores de $ t $, no hay un valor de $ y $ que satisfaga ambas ecuaciones. Por lo tanto, no existe un punto común entre $ l_1 $ y $ l_2 $.\n",
     "\n",
-    "- ***Conclusión:*** Dado que los vectores dirección no son proporcionales y no existe un punto común para las dos rectas, concluimos que $ l_1 $ y $ l_2 $ son **rectas cruzadas** o **secantes no coplanares**. Esto significa que no se intersecan ni son paralelas en el espacio tridimensional."
+    "- ***Conclusión:*** Dado que los vectores dirección no son proporcionales y no existe un punto común para las dos rectas, concluimos que $ l_1 $ y $ l_2 $ son **rectas cruzadas** o **secantes no coplanares**. Esto significa que no se intersecan ni son paralelas en el espacio tridimensional.\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -1768,7 +1779,7 @@
    "id": "9877e666",
    "metadata": {},
    "source": [
-    "***Ejemplo 06:*** Hallar la(s) ecuación(es) de la(s) recta(s) que pasan por el punto $(3,-3,4)$ y es(son) perpendicular(es) a las rectas $l_1: \\frac{2 x+4}{4}=\\frac{-3+y}{-1}=\\frac{-z-2}{-5}$ y $l_2: x-3=\\frac{2 y-7}{2}=\\frac{3-z}{-3}$.\n",
+    "- ***Ejemplo 06:*** Hallar la(s) ecuación(es) de la(s) recta(s) que pasan por el punto $(3,-3,4)$ y es(son) perpendicular(es) a las rectas $l_1: \\frac{2 x+4}{4}=\\frac{-3+y}{-1}=\\frac{-z-2}{-5}$ y $l_2: x-3=\\frac{2 y-7}{2}=\\frac{3-z}{-3}$.\n",
     "\n",
     "Para hallar la(s) ecuación(es) de la(s) recta(s) que pasan por el punto $ (3, -3, 4) $ y son perpendiculares a las rectas $ l_1 $ y $ l_2 $, seguimos los siguientes pasos:\n",
     "\n",
@@ -1823,21 +1834,278 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "donde $ t $ es el parámetro. Esta es la ecuación de la recta que pasa por el punto $ (3, -3, 4) $ y es perpendicular a las rectas $ l_1 $ y $ l_2 $."
+    "donde $ t $ es el parámetro. Esta es la ecuación de la recta que pasa por el punto $ (3, -3, 4) $ y es perpendicular a las rectas $ l_1 $ y $ l_2 $.\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "001a2e02",
    "metadata": {},
+   "source": [
+    "- ***Ejemplo 07:*** Dados el vector $\\overrightarrow{N}=[4 \\mathrm{i}-4 \\mathrm{j}-2 \\mathrm{k}]$ y el punto $T(-4,-2,5)$. Determine la forma paramétrica y simétrica de la recta que es perpendicular a $\\overrightarrow{N}$ y que para por el punto $T$.\n",
+    "\n",
+    "Para encontrar la forma paramétrica y simétrica de la recta que es perpendicular al vector $ \\overrightarrow{N} $ y pasa por el punto $ T(-4, -2, 5) $, seguimos estos pasos:\n",
+    "\n",
+    "1. Obtener un vector dirección para la recta perpendicular a $ \\overrightarrow{N} $. Esto puede lograrse tomando el vector $ \\overrightarrow{N} $ y encontrando un vector perpendicular a él, lo cual se puede hacer tomando el producto cruz entre $ \\overrightarrow{N} $ y cualquier otro vector no paralelo a él.\n",
+    "2. Usar el punto dado $ T $ y el vector dirección encontrado para escribir la ecuación paramétrica de la recta.\n",
+    "3. Luego, convertir esta ecuación paramétrica en su forma simétrica.\n",
+    "\n",
+    "***Paso 1: Obtener un Vector Dirección Perpendicular***\n",
+    "\n",
+    "Dado que $ \\overrightarrow{N} = [4 \\mathbf{i} - 4 \\mathbf{j} - 2 \\mathbf{k}] $, podemos tomar el producto cruz entre $ \\overrightarrow{N} $ y algún otro vector no paralelo a él para obtener un vector perpendicular.\n",
+    "\n",
+    "Tomamos el vector $ \\vec{v} = [1 \\mathbf{i} + 1 \\mathbf{j} + 1 \\mathbf{k}] $ y calculamos el producto cruz entre $ \\overrightarrow{N} $ y $ \\vec{v} $:\n",
+    "\n",
+    "$$\n",
+    "\\overrightarrow{N} \\times \\vec{v} = \n",
+    "\\begin{vmatrix}\n",
+    "\\mathbf{i} & \\mathbf{j} & \\mathbf{k} \\\\\n",
+    "4 & -4 & -2 \\\\\n",
+    "1 & 1 & 1 \\\\\n",
+    "\\end{vmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\mathbf{i} \\begin{vmatrix} -4 & -2 \\\\ 1 & 1 \\end{vmatrix} - \\mathbf{j} \\begin{vmatrix} 4 & -2 \\\\ 1 & 1 \\end{vmatrix} + \\mathbf{k} \\begin{vmatrix} 4 & -4 \\\\ 1 & 1 \\end{vmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\mathbf{i}(-4 - (-2)) - \\mathbf{j}(4 - (-2)) + \\mathbf{k}(4 - (-4)) = \\mathbf{i}(-4 + 2) - \\mathbf{j}(4 + 2) + \\mathbf{k}(4 + 4) = \\mathbf{i}(-2) - \\mathbf{j}(6) + \\mathbf{k}(8)\n",
+    "$$\n",
+    "\n",
+    "Entonces, el vector dirección perpendicular es $ \\overrightarrow{v} = [-2 \\mathbf{i} - 6 \\mathbf{j} + 8 \\mathbf{k}] $.\n",
+    "\n",
+    "\n",
+    "***Paso 2: Escribir la Ecuación Paramétrica de la Recta***\n",
+    "\n",
+    "Usamos el punto dado $ T(-4, -2, 5) $ y el vector dirección perpendicular encontrado para escribir la ecuación paramétrica de la recta.\n",
+    "\n",
+    "La ecuación paramétrica de la recta es:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "x &= -4 - 2t \\\\\n",
+    "y &= -2 - 6t \\\\\n",
+    "z &= 5 + 8t\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "***Paso 3: Convertir a la Forma Simétrica***\n",
+    "\n",
+    "La forma simétrica de la recta es:\n",
+    "\n",
+    "$$\n",
+    "\\frac{x + 4}{-2} = \\frac{y + 2}{-6} = \\frac{z - 5}{8}\n",
+    "$$\n",
+    "\n",
+    "Esta es la ecuación de la recta que es perpendicular a $ \\overrightarrow{N} $ y pasa por el punto $ T(-4, -2, 5) $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0a316fb",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 08:*** Dos de los ángulos directores de una recta son $\\cos 45^{\\circ}, \\cos 60^{\\circ}$. Si la recta pasa por el punto $P(4,-1,4)$, hállese sus ecuaciones (dos soluciones).\n",
+    "\n",
+    "Para encontrar las ecuaciones de la recta dadas dos de sus ángulos directores y que pase por el punto $ P(4, -1, 4) $, seguimos estos pasos:\n",
+    "\n",
+    "***Paso 1.*** Convertir los ángulos directores dados en vectores de dirección $ \\vec{V} $.\n",
+    "\n",
+    "Dado que los ángulos directores son $ \\cos 45^\\circ $ y $ \\cos 60^\\circ $, podemos usar trigonometría para encontrar las componentes del vector de dirección $ \\vec{V} $.\n",
+    "\n",
+    "Para un ángulo $ \\theta $ con respecto al eje $ x $, las componentes del vector de dirección son $ (\\cos \\theta, \\sin \\theta, 0) $. Dado que solo conocemos los ángulos directores, asumiremos que uno de ellos es el ángulo con el eje $ x $ y el otro es el ángulo con el eje $ y $ (el eje $ z $ es irrelevante ya que no se especifica). Luego, tomamos $ \\theta = 45^\\circ $ y $ \\phi = 60^\\circ $.\n",
+    "\n",
+    "Por lo tanto, los vectores de dirección son $ \\vec{V_1} = (\\cos 45^\\circ, \\sin 45^\\circ, 0) $ y $ \\vec{V_2} = (\\cos 60^\\circ, \\sin 60^\\circ, 0) $.\n",
+    "\n",
+    "Dado que $ \\cos 45^\\circ = \\frac{1}{\\sqrt{2}} $ y $ \\cos 60^\\circ = \\frac{1}{2} $, los vectores de dirección son:\n",
+    "\n",
+    "$$\n",
+    "\\vec{V_1} = \\left(\\frac{1}{\\sqrt{2}}, \\frac{1}{\\sqrt{2}}, 0\\right)\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{V_2} = \\left(\\frac{1}{2}, \\frac{\\sqrt{3}}{2}, 0\\right)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "***Paso 2.*** Utilizar el punto dado $ P(4, -1, 4) $ y los vectores de dirección $ \\vec{V} $ para escribir las ecuaciones paramétricas de la recta.\n",
+    "\n",
+    "Usamos el punto dado $ P(4, -1, 4) $ y los vectores de dirección $ \\vec{V_1} $ y $ \\vec{V_2} $ para escribir las ecuaciones paramétricas de la recta.\n",
+    "\n",
+    "Las ecuaciones paramétricas de la recta son:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "x &= 4 + \\frac{1}{\\sqrt{2}}t \\\\\n",
+    "y &= -1 + \\frac{1}{\\sqrt{2}}t \\\\\n",
+    "z &= 4\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "y\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "x &= 4 + \\frac{1}{2}t \\\\\n",
+    "y &= -1 + \\frac{\\sqrt{3}}{2}t \\\\\n",
+    "z &= 4\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "***Paso 3.*** Convertir las ecuaciones paramétricas a su forma simétrica.\n",
+    "\n",
+    "Convertimos las ecuaciones paramétricas de la recta a su forma simétrica.\n",
+    "\n",
+    "Para la primera solución:\n",
+    "\n",
+    "$$\n",
+    "\\frac{x - 4}{\\frac{1}{\\sqrt{2}}} = \\frac{y + 1}{\\frac{1}{\\sqrt{2}}} = \\frac{z - 4}{0}\n",
+    "$$\n",
+    "\n",
+    "y\n",
+    "\n",
+    "$$\n",
+    "\\frac{x - 4}{\\frac{1}{2}} = \\frac{y + 1}{\\frac{\\sqrt{3}}{2}} = \\frac{z - 4}{0}\n",
+    "$$\n",
+    "\n",
+    "Para la segunda solución, obtenemos la misma forma simétrica pero con los valores correspondientes de $ \\vec{V_2} $.\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c1efe8",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 09:*** Demostrar que los puntos $A(3,4,2), B(-1,5,3)$ y $C(2,1,4)$ no son colineales. Luego hallar la ecuación de la línea perpendicular a dicho plano y que pasa por el origen.\n",
+    "\n",
+    "Para demostrar que los puntos $ A(3,4,2) $, $ B(-1,5,3) $ y $ C(2,1,4) $ no son colineales, podemos verificar si el vector formado por dos de los puntos es linealmente independiente del vector formado por los otros dos puntos. Luego, para encontrar la ecuación de la línea perpendicular al plano formado por estos puntos y que pasa por el origen, podemos usar el producto cruz.\n",
+    "\n",
+    "***Paso 1 - Verificar Colinealidad:*** Verificaremos si los vectores $ \\overrightarrow{AB} $ y $ \\overrightarrow{AC} $ son linealmente independientes. Si lo son, entonces los puntos no son colineales.\n",
+    "\n",
+    "Calculamos los vectores dirección $ \\overrightarrow{AB} $ y $ \\overrightarrow{AC} $:\n",
+    "\n",
+    "$$\\overrightarrow{AB} = B - A = (-1 - 3, 5 - 4, 3 - 2) = (-4, 1, 1)$$\n",
+    "$$\\overrightarrow{AC} = C - A = (2 - 3, 1 - 4, 4 - 2) = (-1, -3, 2)$$\n",
+    "\n",
+    "Los vectores no son proporcionales, lo que indica que los puntos no son colineales.\n",
+    "\n",
+    "***Paso 2 - Encontrar la Ec. del Plano y la Línea Perpendicular:*** Una vez que confirmemos que los puntos no son colineales, podemos usar el producto cruz entre los vectores $ \\overrightarrow{AB} $ y $ \\overrightarrow{AC} $ para encontrar un vector normal al plano que pasará por el origen. Luego, usaremos este vector normal para escribir la ecuación de la línea perpendicular que pasa por el origen.\n",
+    "\n",
+    "Usamos el producto cruz entre $ \\overrightarrow{AB} $ y $ \\overrightarrow{AC} $ para encontrar un vector normal al plano:\n",
+    "\n",
+    "$$\\overrightarrow{n} = \\overrightarrow{AB} \\times \\overrightarrow{AC} = \\begin{vmatrix} \\mathbf{i} & \\mathbf{j} & \\mathbf{k} \\\\ -4 & 1 & 1 \\\\ -1 & -3 & 2 \\end{vmatrix} = \\mathbf{i} \\begin{vmatrix} 1 & 1 \\\\ -3 & 2 \\end{vmatrix} - \\mathbf{j} \\begin{vmatrix} -4 & 1 \\\\ -1 & 2 \\end{vmatrix} + \\mathbf{k} \\begin{vmatrix} -4 & 1 \\\\ -1 & -3 \\end{vmatrix}$$\n",
+    "\n",
+    "$$= \\mathbf{i}((1)(2) - (1)(-3)) - \\mathbf{j}((-4)(2) - (1)(-1)) + \\mathbf{k}((-4)(-3) - (1)(-1)) = \\mathbf{i}(2 + 3) - \\mathbf{j}(-8 + 1) + \\mathbf{k}(12 + 1) = \\mathbf{i}5 - \\mathbf{j}-7 + \\mathbf{k}13$$\n",
+    "\n",
+    "Por lo tanto, el vector normal al plano es $ \\overrightarrow{n} = (5, -7, 13) $.\n",
+    "\n",
+    "Entonces, la ecuación del plano que pasa por los puntos $ A $, $ B $ y $ C $ es:\n",
+    "\n",
+    "$$5x - 7y + 13z + D = 0$$\n",
+    "\n",
+    "Para encontrar $ D $, podemos usar cualquiera de los puntos. Usaremos $ A(3, 4, 2) $:\n",
+    "\n",
+    "$$5(3) - 7(4) + 13(2) + D = 0$$\n",
+    "\n",
+    "$$15 - 28 + 26 + D = 0$$\n",
+    "\n",
+    "$$13 - 28 + D = 0$$\n",
+    "\n",
+    "$$-15 + D = 0$$\n",
+    "\n",
+    "$$D = 15$$\n",
+    "\n",
+    "Por lo tanto, la ecuación del plano es:\n",
+    "\n",
+    "$$5x - 7y + 13z + 15 = 0$$\n",
+    "\n",
+    "Finalmente, la ecuación de la línea perpendicular que pasa por el origen es simplemente el vector normal al plano, es decir:\n",
+    "\n",
+    "$$\\frac{x}{5} = \\frac{y}{-7} = \\frac{z}{13}$$\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2e0ba8",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 10:*** Para las lineas $l_1: \\frac{x+2}{3}=y+3=\\frac{z-1}{2} y$\n",
+    "$l_2: 2 x-1=-4 y-7=-z+4$, determinar:\n",
+    "1. Si se cruzan o se cortan.\n",
+    "2. En caso de cortarse determinar si se trata de la misma recta o si son distintas en este último caso obtener el punto donde se cortan.\n",
+    "\n",
+    "Para determinar si las líneas $ l_1 $ y $ l_2 $ se cruzan o se cortan, primero necesitamos expresar ambas líneas en forma paramétrica. Luego, podemos igualar las ecuaciones paramétricas para ver si tienen solución. Si tienen solución, las líneas se cruzan. Si no tienen solución, las líneas son paralelas o coincidentes.\n",
+    "\n",
+    "***Expresión Paramétrica de las Líneas***\n",
+    "\n",
+    "Para $ l_1 $:\n",
+    "$$ \\frac{x+2}{3}=y+3=\\frac{z-1}{2} \\quad \\Rightarrow \\quad x = 3t - 2, \\ y = t - 3, \\ z = 2t + 1$$\n",
+    "\n",
+    "Para $ l_2 $:\n",
+    "$$2x - 1 = -4y - 7 = -z + 4 \\quad \\Rightarrow \\quad x = \\frac{1}{2}, \\ y = -\\frac{1}{4} t - \\frac{9}{4}, \\ z = -t + 4$$\n",
+    "\n",
+    "***Paso 1. Determinar si se Cruzan o se Cortan:*** Para que las líneas se crucen, deben tener una solución común en forma de un punto. Esto sucede cuando las ecuaciones paramétricas tienen una solución única. Igualaremos las ecuaciones paramétricas de $ l_1 $ y $ l_2 $ para encontrar $ t $.\n",
+    "\n",
+    "Igualamos $ x $ y $ z $ de las ecuaciones paramétricas de $ l_1 $ y $ l_2 $:\n",
+    "\n",
+    "$$3t - 2 = \\frac{1}{2} \\quad \\text{y} \\quad 2t + 1 = -t + 4$$\n",
+    "\n",
+    "Resolviendo para $ t $:\n",
+    "\n",
+    "$$3t = \\frac{5}{2} \\quad \\Rightarrow \\quad t = \\frac{5}{6}$$\n",
+    "\n",
+    "Sustituyendo $ t = \\frac{5}{6} $ en las ecuaciones paramétricas, encontramos las coordenadas del punto donde las líneas se cruzan.\n",
+    "\n",
+    "***Paso 2. En caso de Cortarse:*** Ahora que sabemos que las líneas se cortan, verificamos si son la misma línea o diferentes. Para hacerlo, comparamos sus ecuaciones paramétricas. Si son iguales, son la misma línea; si son diferentes, son distintas.\n",
+    "\n",
+    "Para $ l_1 $:\n",
+    "$$x = 3 \\left(\\frac{5}{6}\\right) - 2 = \\frac{1}{2}, \\quad y = \\frac{5}{6} - 3 = -\\frac{13}{6}, \\quad z = 2 \\left(\\frac{5}{6}\\right) + 1 = \\frac{17}{3}$$\n",
+    "\n",
+    "Para $ l_2 $:\n",
+    "$$x = \\frac{1}{2}, \\quad y = -\\frac{1}{4} \\left(\\frac{5}{6}\\right) - \\frac{9}{4} = -\\frac{13}{6}, \\quad z = -\\frac{5}{6} + 4 = \\frac{17}{3}$$\n",
+    "\n",
+    "Como las coordenadas son iguales, las líneas no son distintas y se cortan en el punto $(\\frac{1}{2}, -\\frac{13}{6}, \\frac{17}{3})$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5236cd18",
+   "metadata": {},
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d374ad44",
+   "cell_type": "markdown",
+   "id": "86d4d0ca",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aef0765",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c8895c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86982002",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b086f8",
+   "metadata": {},
    "source": []
   }
  ],
