--- a/S07_El_Plano.ipynb
+++ b/S07_El_Plano.ipynb
@@ -1110,6 +1110,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae38715a",
+   "metadata": {},
+   "source": [
+    "### Ejemplos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a53dc3dd",
    "metadata": {},
    "source": [
@@ -1161,22 +1169,202 @@
     "   $$\n",
     "   (1 + 2k)x + (1 + 3k)y + (1 - 5k)z + 3 = 0\n",
     "   $$\n",
-    "   y obtenemos la ecuación del plano $ m_o $ que tiene una distancia de $\\sqrt{3}$ al origen."
+    "   y obtenemos la ecuación del plano $ m_o $ que tiene una distancia de $\\sqrt{3}$ al origen.\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ffc61515",
    "metadata": {},
-   "source": []
+   "source": [
+    "- ***Ejemplo 13:*** Encontrar la ecuación de un plano $m_o$ que pasa por la intersección de los planos $m_1: 5 x-3 y+2 z+1=0$ y $m_2: x+3 y-z+11=0$ y que es paralelo a la recta $l_1$ producto de la intersección de los planos $m_3: x+4 y-3 z-2=0$ y $m_4: 3 x-y+4 z-9=0$\n",
+    "\n",
+    "Para resolver este problema, seguiremos una serie de pasos lógicos. Primero, necesitamos entender que el plano $ m_o $ que buscamos debe:\n",
+    "\n",
+    "1. Pasar por la línea de intersección de los planos $ m_1 $ y $ m_2 $.\n",
+    "2. Ser paralelo a la recta $ l_1 $ que es la intersección de los planos $ m_3 $ y $ m_4 $.\n",
+    "\n",
+    "- ***Paso 1: Expresar el Plano $ m_o $:*** El plano $ m_o $ que pasa por la intersección de $ m_1 $ y $ m_2 $ puede ser expresado como una combinación lineal de $ m_1 $ y $ m_2 $:\n",
+    "$$ m_o: (5x - 3y + 2z + 1) + k(x + 3y - z + 11) = 0 $$\n",
+    "Expandiendo y reorganizando:\n",
+    "$$ (5 + k)x + (-3 + 3k)y + (2 - k)z + (1 + 11k) = 0 $$\n",
+    "\n",
+    "- ***Paso 2: Encontrar la Dirección de la Recta $ l_1 $:*** La recta $l_1$ se forma por la intersección de los planos $ m_3 $ y $ m_4 $. Para encontrar la dirección de $ l_1 $, calculamos el producto cruz de los vectores normales de $ m_3 $ y $ m_4 $:\n",
+    "\n",
+    "$$ \\vec{n}_3 = [1, 4, -3], \\quad \\vec{n}_4 = [3, -1, 4] $$\n",
+    "$$ \\vec{d}_{l_1} = \\vec{n}_3 \\times \\vec{n}_4 $$\n",
+    "\n",
+    "Calculamos el producto cruz:\n",
+    "\n",
+    "$$ \\vec{d}_{l_1} = \\begin{vmatrix} \\mathbf{i} & \\mathbf{j} & \\mathbf{k} \\\\ 1 & 4 & -3 \\\\ 3 & -1 & 4 \\end{vmatrix} $$\n",
+    "$$ \\vec{d}_{l_1} = \\mathbf{i}(4 \\cdot 4 - (-3) \\cdot (-1)) - \\mathbf{j}(1 \\cdot 4 - (-3) \\cdot 3) + \\mathbf{k}(1 \\cdot (-1) - 4 \\cdot 3) $$\n",
+    "$$ \\vec{d}_{l_1} = \\mathbf{i}(16 - 3) - \\mathbf{j}(4 - 9) + \\mathbf{k}(-1 - 12) $$\n",
+    "$$ \\vec{d}_{l_1} = 13\\mathbf{i} + 5\\mathbf{j} - 13\\mathbf{k} $$\n",
+    "\n",
+    "- ***Paso 3: Condición de Paralelismo:*** Para que $ m_o $ sea paralelo a $ l_1 $, el vector normal de $ m_o $ debe ser perpendicular al vector dirección de $ l_1 $. Esto significa que el producto escalar entre el vector normal de $ m_o $ y $ \\vec{d}_{l_1} $ debe ser cero.\n",
+    "\n",
+    "$$ (5 + k, -3 + 3k, 2 - k) \\cdot (13, 5, -13) = 0 $$\n",
+    "\n",
+    "Resolviendo para $ k $:\n",
+    "\n",
+    "$$ (5 + k) \\cdot 13 + (-3 + 3k) \\cdot 5 + (2 - k) \\cdot (-13) = 0 $$\n",
+    "$$ 65 + 13k - 15 + 15k - 26 + 13k = 0 $$\n",
+    "$$ 41k + 24 = 0 $$\n",
+    "$$ k = -\\frac{24}{41} $$\n",
+    "\n",
+    "- ***Paso 4: Ecuación Final del Plano $ m_o $:*** Sustituyendo $ k $ de nuevo en la ecuación general de $ m_o $:\n",
+    "\n",
+    "$$ (5 - \\frac{24}{41})x + (-3 + 3(-\\frac{24}{41}))y + (2 + \\frac{24}{41})z + 1 - \\frac{24}{41} \\cdot 11 = 0 $$\n",
+    "\n",
+    "Simplificando y organizando los términos, obtendríamos la ecuación final para $ m_o $.\n",
+    "\n",
+    "***"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a9b1aa2",
+   "cell_type": "markdown",
+   "id": "b381ed80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- ***Ejemplo 14:*** Demostrar que estos planos\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& m_1: 2 x-y+2 z=8 \\\\\n",
+    "& m_2: 8 x-y+13 z=21 \\\\\n",
+    "& m_3: 4 x+y+9 z=5\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Pasan por la misma línea recta.\n",
+    "\n",
+    "Para demostrar que los tres planos dados pasan por la misma línea recta, seguiremos un enfoque que implica analizar sus vectores normales y comprobar si dos de los planos son combinaciones lineales de cualquier par entre ellos. Si esto es así, la intersección de cualquier par de estos planos genera una línea, y si el tercer plano también contiene esta línea, todos ellos comparten la misma línea recta.\n",
+    "\n",
+    "- ***Paso 1: Comparar vectores normales:*** Primero, identificamos los vectores normales de cada plano:\n",
+    "  - Para $ m_1 $: $\\vec{n}_1 = (2, -1, 2)$\n",
+    "  - Para $ m_2 $: $\\vec{n}_2 = (8, -1, 13)$\n",
+    "  - Para $ m_3 $: $\\vec{n}_3 = (4, 1, 9)$\n",
+    "\n",
+    "- ***Paso 2: Verificar relaciones lineales entre los vectores normales:*** Si dos de estos vectores normales están relacionados por una combinación lineal, los planos correspondientes están alineados de tal manera que su intersección es una línea recta.\n",
+    "\n",
+    "***Relación entre $ \\vec{n}_1 $ y $ \\vec{n}_2 $***\n",
+    "Para determinar si $ \\vec{n}_2 $ es un múltiplo de $ \\vec{n}_1 $, observamos:\n",
+    "$$ \\frac{8}{2} = 4, \\quad \\frac{-1}{-1} = 1, \\quad \\frac{13}{2} \\neq \\frac{8}{2} $$\n",
+    "Por lo tanto, $ \\vec{n}_2 $ no es un múltiplo de $ \\vec{n}_1 $.\n",
+    "\n",
+    "***Relación entre $ \\vec{n}_1 $ y $ \\vec{n}_3 $***\n",
+    "$$ \\frac{4}{2} = 2, \\quad \\frac{1}{-1} = -1, \\quad \\frac{9}{2} $$\n",
+    "No hay un múltiplo común que relacione estos vectores.\n",
+    "\n",
+    "***Relación entre $ \\vec{n}_2 $ y $ \\vec{n}_3 $***\n",
+    "Podemos verificar si existe un factor $ k $ tal que:\n",
+    "$$ k \\cdot 8 = 4, \\quad k \\cdot -1 = 1, \\quad k \\cdot 13 = 9 $$\n",
+    "Claramente, no existe tal $ k $ que satisfaga todas las condiciones.\n",
+    "\n",
+    "- ***Paso 3: Resolver el sistema para encontrar la intersección:*** Dado que no encontramos una relación directa por múltiplos, analicemos si los tres planos se intersecan en una línea recta resolviendo el sistema formado por las ecuaciones de los tres planos. Si pueden reducirse a dos ecuaciones lineales independientes, esto indicará que se intersecan a lo largo de una línea recta.\n",
+    "\n",
+    "\n",
+    "***Formar y resolver el sistema:*** Formamos un sistema de ecuaciones lineales usando las ecuaciones de los planos y resolvemos para $ x $, $ y $, y $ z $ (o reducimos para encontrar dependencias). La respuesta obtenida es:\n",
+    "\n",
+    "\n",
+    "$$ x = \\frac{13}{6} - \\frac{11}{6}z $$\n",
+    "$$ y = -\\frac{5}{3}z - \\frac{11}{3} $$\n",
+    "\n",
+    "Las expresiones para $x$ y $y$ en términos de $z$ confirman que no hay una única solución para el punto de intersección, sino una línea de soluciones que depende del valor de $z$. Esto es típico de la intersección de múltiples planos cuando no son paralelos ni coincidentes.\n",
+    "\n",
+    "Dado que las soluciones para $x$ y $y$ dependen de $z$, los tres planos $m_1$, $m_2$, y $m_3$ se intersecan a lo largo de una línea recta en el espacio tridimensional. Cada valor de $z$ determina un conjunto correspondiente de valores para $x$ y $y$, generando diferentes puntos a lo largo de la misma línea de intersección.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2940172",
+   "metadata": {},
+   "source": [
+    "### Ejercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee07f2df",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 01:*** encontrar la ecuación del plano que contiene los puntos $a(2,3,7)$; $b(-1,6,-1)$ y $c(0,2,-1)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c41634",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 02:*** encontrar la ecuación del plano que pasa por el punto $(7,-1,8)$ y cuyos cosenos directores del vector normal son:\n",
+    "$$-\\frac{5}{\\sqrt{110}}, \\frac{9}{\\sqrt{110}}, \\frac{2}{\\sqrt{110}} \\text {. }$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f94b7f76",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 03:*** encontrar la intersección de la línea recta $l_1: \\frac{x+4}{3}=\\frac{y-3}{1}=\\frac{z-5}{-1} \\quad y$ el plano $m:-3 x+5 y-9 z+4=0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d29639a",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 04:*** Encontrar la ecuación del plano, paralelo al plano $x+3 y-2 z+14=0$ y cuya distancia con respecto al origen es $2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bbaf01",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 05:*** Encontrar la ecuación simétrica y paramétrica de la recta que cumpla con: Pasa por el punto $N(2,1,0)$ y es perpendicular al plano $x y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9d92949",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 06:*** Un plano pasa por el punto $(1,6,-2)$ y tiene la misma traza sobre el plano $x y$ que el plano $3 x-y-8 z+7=0$. Halle su ecuación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdbefe8a",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 07:*** Determine la posición relativa entre los planos $\\Omega:-4 x+y+2 z+6=0 \\quad$ y $\\Gamma: 2 x-4 y+4 z-4=0$ y el ángulo entre ellos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e32e697",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 08:*** Determine si el punto $A=(1,1 \\quad,-2)$ se encuentra más cerca del plano $\\Pi:-2 x+4 y-4 z=-14$ ○ de la recta $1:\\{x=9 k-7 ; y=-12 k+8 ; ~ z=8 k-3\\} ~ k \\in R$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efb9aa27",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 09:*** Hallar la ecuación del plano que es paralelo al que tiene por ecuación $x-2 y+2 z=-12$ y cuya distancia del origen es igual a 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5092d412",
+   "metadata": {},
+   "source": [
+    "- ***Ejercicio 10:*** Un plano pasa por los puntos $(3,0,-1),(2,-3,-3)$ y pertenece a la radiación determinada por los planos $m_1: 2 x-3 y+2 z-9=0$, $m_2: x+4 y-z+3=0$ y $m_3: 3 x-2 y-2 z-6=0$. Hallar la ecuación del plano."
+   ]
   }
  ],
  "metadata": {
